--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-heroicons": "^3.2.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-native-text-ticker": "^1.14.0",
+    "react-native-vertical-view-pager": "^0.1.1",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
